Version 5.10 - *

- Improved indent guides positioning.
- Removed full screen information bar.
- Added GUI option for maximum line length option to AStyle > Formatter Options.
- Fixed parameter mismatch in Chinese translation.
- Removed severely outdated web update functionality.

Version 5.9.2 - 1 Februari 2015

- Changed Format Current File shortcut from Shift+F to Shift+Ctrl+A.
- Removed/Changed all default Alt+(Key) shortcuts because they interfere with Alt menu navigation.
- Assigned some new default shortcuts like Ctrl+B (Open Containing Folder) and F2 (Rename File).
- Fixed Show Makefile being executable when no compiler set is configured.

Version 5.9.1 - 31 Januari 2015

- Updated Tools >> Edit Shortcuts.
- Removed Ctrl+Alt combination in default shortcuts to ensure that the AltGr button keeps functioning:
http://blogs.msdn.com/b/oldnewthing/archive/2004/03/29/101121.aspx

- Fixed formatter options command line not showing up after first launch.
- Added source LaTeX of testing document DevTest.pdf.
- Widened the Menu >> Search >> Find window in order to accomodate longer translations.
- Fixed a crash when launching for the first time with no compilers available.
- Added last selection arrow to Find Results.
- Fixed out of bounds error in TCppParser.HandleMethod.

Version 5.9.0 - 5 Januari 2015

- Added AStyle integration.
- Remodeled Help >> About window.
- When looking up a piece of code by Ctrl+Clicking the destination line is centered.
- Removed caching from Tools >> Editor Options.
- Widened the exception window.
- Removed caching from the first-time configuration window.
- Improved parsing progress messages in the status bar.
- Improved performance of the classes list toolbar.
- Improved function declaration/definition switching.
- Significantly improved performance when selecting text.
- Fixed parser error when parsing C-style cast of string constant.
- Huge rewrite of code folding implementation.
- Major improvements in typing responsiveness.